--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -58,7 +58,7 @@ margin-top: 0.1em!important;
     right: 0;
     left: 0;
     background: url('../images/backgroud.jpg') no-repeat;
-    height: 115% !important;
+    height: 115% ;
     background-position: 60% 0%;
     background-size: cover;
     padding-bottom: 5em;
@@ -78,7 +78,6 @@ margin-top: 0.1em!important;
     margin-top: 3em!important;
     z-index: 2!important;
     position: relative;
-
 }
 .header-content-word{
     font-size: 2.5em;
@@ -194,22 +193,27 @@ margin-top: 0.1em!important;
 .more-box{
     margin-top: 5em;
 }
-.box-img-help{
+.box-img-help::after{
     margin-top: 8em;
     background: url("../images/background-04-1920x900.jpg") no-repeat;
     height: 400px;
     background-position: 30% 60% !important;
     background-size: 140%;
     background-attachment: fixed;
+    position: absolute;
+    left: 0;
+    content: '';
+
 }
 .box-img-help::before{
     background: rgba(17, 90, 108, 0.4);
+    background-size: 100%;
     height: 63% !important;
     width: 100% !important;
     position: absolute;
     left: 0;
-
     content: '';
+/*****************************/
 
 }
 .how-we-can{
@@ -333,12 +337,12 @@ footer{
 ::placeholder{
     font-size: 0.8em
 }
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 
     .header-box::before{
-        height: 140%!important;
+        height: 140%;
     }.header-box::after{
-        height: 140%!important;
+        height: 140%;
     }
     .header-content-word{
         font-size: 1.5em;
@@ -415,24 +419,19 @@ footer{
     }
 
 }
-@media (max-width: 400px) {
+@media only screen and (max-width: 400px) {
     .service-button{
         width: 98%;
         margin-right: 0em;
     }
-    .header-box{
-        background-position: 80% 0%;
-        background-size: 255.5%;
-    }
+
     .header-box::before{
-        height: 180%!important;
+        height: 64%;
     }.header-box::after{
-         height: 180%!important;
+         height: 64%;
      }
-
-
 }
-@media (max-width: 350px){
+@media only screen and (max-width: 350px){
     .first-service-box{
         margin-right: 0px;
     }
@@ -442,22 +441,31 @@ footer{
     .service-button{
         width: 100%;
     }
-}
-
-@media (max-width: 300px){
     .header-box::before{
-        height: 160%!important;
+        height: 82.3% ;
     }.header-box::after{
-         height: 160%!important;
+         height: 82.3% ;
      }
 }
 
-@media (max-width: 1100px){
+@media only screen and (max-width: 300px){
     .header-box::before{
-        height: 53%!important;
+        height: 82.3%;
     }.header-box::after{
-         height: 53%!important;
+         height: 82.3%;
      }
+}
+
+@media only screen and (max-width: 1100px){
+
+    .header-box::before{
+        height: 53%;
+    }
+
+    .header-box::after{
+         height: 53%;
+     }
+
     .service-box{
         margin-right: 5em;
     }
