--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -78,6 +78,7 @@ margin-top: 0.1em!important;
     margin-top: 3em!important;
     z-index: 2!important;
     position: relative;
+
 }
 .header-content-word{
     font-size: 2.5em;
@@ -337,7 +338,7 @@ footer{
 ::placeholder{
     font-size: 0.8em
 }
-@media only screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
 
     .header-box::before{
         height: 140%;
@@ -419,19 +420,24 @@ footer{
     }
 
 }
-@media only screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
     .service-button{
         width: 98%;
         margin-right: 0em;
     }
-
+    .header-box{
+        background-position: 80% 0%;
+        background-size: 255.5%;
+    }
     .header-box::before{
         height: 64%;
     }.header-box::after{
          height: 64%;
      }
+
+
 }
-@media only screen and (max-width: 350px){
+@media screen and (max-width: 350px){
     .first-service-box{
         margin-right: 0px;
     }
@@ -442,13 +448,13 @@ footer{
         width: 100%;
     }
     .header-box::before{
-        height: 82.3% ;
+        height: 82.3%;
     }.header-box::after{
-         height: 82.3% ;
+         height: 82.3%;
      }
 }
 
-@media only screen and (max-width: 300px){
+@media screen and (max-width: 300px){
     .header-box::before{
         height: 82.3%;
     }.header-box::after{
@@ -456,27 +462,3 @@ footer{
      }
 }
 
-@media only screen and (max-width: 1100px){
-
-    .header-box::before{
-        height: 53%;
-    }
-
-    .header-box::after{
-         height: 53%;
-     }
-
-    .service-box{
-        margin-right: 5em;
-    }
-    .service-button{
-        padding-top: 0.5em;
-        padding-bottom: 0.5em;
-    }
-    .mobile-service{
-        margin-right: -2em;
-    }
-    .service-box{
-        margin-right: 6.5em;
-    }
-}
