--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -183,9 +183,9 @@ margin-top: 0.1em!important;
     font-size: 1.2em;
     font-family: Cairo,sans-serif;
     font-weight: 400;
-
     width: 18%;
 }
+
 .btn-ellipse:hover{
     background-color: #18afd3!important;
     color: #ffffff!important;
@@ -203,22 +203,26 @@ margin-top: 0.1em!important;
     background-attachment: fixed;
     position: absolute;
     left: 0;
+    right: 0;
+    z-index: 1;
     content: '';
-
 }
 .box-img-help::before{
+    margin-top: 8em;
     background: rgba(17, 90, 108, 0.4);
-    background-size: 100%;
-    height: 63% !important;
+    background-size: 140%;
+    height: 400px;
     width: 100% !important;
     position: absolute;
     left: 0;
+    right: 0;
     content: '';
+    z-index: 3;
 /*****************************/
 
 }
 .how-we-can{
-    margin-top: 4em;
+    margin-top: 20%;
     font-size: 2em;
     font-family: Droid-kofi, sans-serif;
     font-weight: 600;
@@ -339,11 +343,14 @@ footer{
     font-size: 0.8em
 }
 @media screen and (max-width: 767px) {
-
+    .service-out{
+        margin-top: 3em;
+    }
     .header-box::before{
-        height: 140%;
-    }.header-box::after{
-        height: 140%;
+        height: 52%;
+    }
+    .header-box::after{
+        height: 52%;
     }
     .header-content-word{
         font-size: 1.5em;
@@ -362,10 +369,11 @@ footer{
     }
     .btn-ellipse{
         width: 31%;
+        font-size: 1em;
     }
     .btn-elipse-mobile{
-        height: 50px;
-        margin-top: 5.5em;
+
+        margin-top: 6.5em;
     }
     .w-50{
        width: 100%!important;
@@ -377,13 +385,18 @@ footer{
     .service-button{
         margin-top: 0px;
         margin-right: 0em;
-        width: 88%;
+        width: 100%;
         border-radius: 0px!important;
     }
     .box-img-help::before{
         height: 37%!important;
         margin-top: 5em;
+    }
 
+    .box-img-help::after{
+        height: 37%!important;
+        margin-top: 5em;
+        background-attachment: scroll!important;
     }
     .how-we-can{
         margin-top: 1em;
@@ -420,9 +433,9 @@ footer{
     }
 
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 420px) {
     .service-button{
-        width: 98%;
+        width:100%;
         margin-right: 0em;
     }
     .header-box{
@@ -430,14 +443,12 @@ footer{
         background-size: 255.5%;
     }
     .header-box::before{
-        height: 64%;
+        height: 84%;
     }.header-box::after{
-         height: 64%;
+         height: 84%;
      }
-
-
 }
-@media screen and (max-width: 350px){
+@media screen and (max-width: 390px){
     .first-service-box{
         margin-right: 0px;
     }
@@ -448,9 +459,9 @@ footer{
         width: 100%;
     }
     .header-box::before{
-        height: 82.3%;
+        height: 84%;
     }.header-box::after{
-         height: 82.3%;
+         height: 84%;
      }
 }
 
