--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -437,6 +437,9 @@ footer{
     .more-box-above{
         margin-top: 5em!important;
     }
+    .mobile-edition{
+        margin-top: 3em;
+    }
 
 }
 .our-accounts{
